--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
 		<li>Spotify</li>
 	</ul>
 
+	<hr>
+	<p>Todos os direitos reservados pro criador Henrique Ferreira &copy;</p>
+
 </body>
 </html>
