--- a/genero.html
+++ b/genero.html
@@ -42,5 +42,8 @@
 	<img src="imagens/j.jpeg">
 	<img src="imagens/k.jpeg">
 
+	<hr>
+	<p>Todos os direitos reservados pro criador Henrique Ferreira &copy;</p>
+
 </body>
 </html>
