--- a/streaming.html
+++ b/streaming.html
@@ -18,5 +18,8 @@
 	<p>Um App de streaming de Músicas e Podcats, que vem ganhando espaço por conta do seu premium permite escutar musicas offline, e com a queda do play musica do google ficou com menor concorrencia.</p>
 	<img src="imagens/n.png">
 
+	<hr>
+	<p>Todos os direitos reservados pro criador Henrique Ferreira &copy;</p>
+
 </body>
 </html>
